<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_review"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_review" />
        <item
            android:id="@+id/nav_biography"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_biography" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_statistic" />
        <item
            android:id="@+id/nav_photo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_photo" />
    </group>


</menu>
